SET(PROJECT_TEST_NAME IfcAxis1Placement)

PROJECT(${PROJECT_TEST_NAME}_app)

FILE(GLOB PROJECT_SOURCES "*.cpp")

FILE(GLOB PROJECT_INCLUDES "*.h")
SET(PROJECT_INCLUDES ${PROJECT_INCLUDES} ../../tests.h)

ADD_EXECUTABLE(${PROJECT_TEST_NAME}_app ${PROJECT_SOURCES} ${PROJECT_INCLUDES})

TARGET_LINK_LIBRARIES(${PROJECT_TEST_NAME}_app ifc2x3)

SET_TARGET_PROPERTIES(${PROJECT_TEST_NAME}_app PROPERTIES PROJECT_LABEL "Tests Ifc Derived ${PROJECT_TEST_NAME}")

ADD_TEST(NAME ${PROJECT_TEST_NAME} COMMAND ${PROJECT_TEST_NAME}_app WORKING_DIRECTORY ${EXECUTABLE_OUTPUT_PATH})


