SET(PROJECT_TEST_NAME test-threading)

FILE(GLOB PROJECT_SOURCES "*.cpp")
FILE(GLOB PROJECT_INCLUDES "*.h")

SET(PROJECT_INCLUDES ${PROJECT_INCLUDES} ../../tests.h)

ADD_EXECUTABLE(${PROJECT_TEST_NAME} ${PROJECT_SOURCES} ${PROJECT_INCLUDES})

TARGET_LINK_LIBRARIES(${PROJECT_TEST_NAME} tests ifc2x3)

SET_TARGET_PROPERTIES(${PROJECT_TEST_NAME} PROPERTIES PROJECT_LABEL "Unit tests ${PROJECT_TEST_NAME}")

ADD_TEST(NAME ${PROJECT_TEST_NAME} COMMAND ${PROJECT_TEST_NAME} ${CMAKE_HOME_DIRECTORY}/tests/tickets/ticket5/test_2.ifc WORKING_DIRECTORY ${EXECUTABLE_OUTPUT_PATH} )

