find_package(Qt4 QUIET)

if(QT4_FOUND)

    SET(PROJECT_TEST_NAME ticket1179)

    PROJECT(${PROJECT_TEST_NAME}_app)

    FILE(GLOB PROJECT_SOURCES "*.cpp")

    FILE(GLOB PROJECT_INCLUDES "*.h")

    SET(PROJECT_INCLUDES ${PROJECT_INCLUDES} ../../tests.h)

    include(${QT_USE_FILE})

    ADD_EXECUTABLE(${PROJECT_TEST_NAME}_app ${PROJECT_SOURCES} ${PROJECT_INCLUDES})

    TARGET_LINK_LIBRARIES(${PROJECT_TEST_NAME}_app tests ${QT_LIBRARIES} Step)

    SET_TARGET_PROPERTIES(${PROJECT_TEST_NAME}_app PROPERTIES PROJECT_LABEL "Tickets ${PROJECT_TEST_NAME}")

    ADD_TEST(NAME ${PROJECT_TEST_NAME} COMMAND ${PROJECT_TEST_NAME}_app WORKING_DIRECTORY ${EXECUTABLE_OUTPUT_PATH})

endif()
