SET(PROJECT_TEST_NAME ticket2-iso8859-1)

PROJECT(${PROJECT_TEST_NAME}_app)

FILE(GLOB PROJECT_SOURCES "*.cpp")

FILE(GLOB PROJECT_INCLUDES "*.h")
SET(PROJECT_INCLUDES ${PROJECT_INCLUDES} ../../tests.h)

ADD_EXECUTABLE(${PROJECT_TEST_NAME}_app ${PROJECT_SOURCES} ${PROJECT_INCLUDES})

TARGET_LINK_LIBRARIES(${PROJECT_TEST_NAME}_app tests Step)

SET_TARGET_PROPERTIES(${PROJECT_TEST_NAME}_app PROPERTIES PROJECT_LABEL "${PROJECT_TEST_NAME}")
SET_TARGET_PROPERTIES(${PROJECT_TEST_NAME}_app PROPERTIES FOLDER "${CURRENT_FOLDER_LIST}")

ADD_TEST(${PROJECT_TEST_NAME}_app ${EXECUTABLE_OUTPUT_PATH}/${PROJECT_TEST_NAME}_app )

