SET(PROJECT_TEST_NAME ticket5)

PROJECT(${PROJECT_TEST_NAME}_app)

FILE(GLOB PROJECT_SOURCES "*.cpp")

FILE(GLOB PROJECT_INCLUDES "*.h")
SET(PROJECT_INCLUDES ${PROJECT_INCLUDES} ../../tests.h)

ADD_EXECUTABLE(${PROJECT_TEST_NAME}_app ${PROJECT_SOURCES} ${PROJECT_INCLUDES})

TARGET_LINK_LIBRARIES(${PROJECT_TEST_NAME}_app tests ifc2x3)

SET_TARGET_PROPERTIES(${PROJECT_TEST_NAME}_app PROPERTIES PROJECT_LABEL "Tickets ${PROJECT_TEST_NAME}")


ADD_TEST(NAME ${PROJECT_TEST_NAME}_1 COMMAND ${PROJECT_TEST_NAME}_app ${CMAKE_CURRENT_LIST_DIR}/test_1.ifc WORKING_DIRECTORY ${EXECUTABLE_OUTPUT_PATH})
ADD_TEST(NAME ${PROJECT_TEST_NAME}_2 COMMAND ${PROJECT_TEST_NAME}_app ${CMAKE_CURRENT_LIST_DIR}/test_2.ifc WORKING_DIRECTORY ${EXECUTABLE_OUTPUT_PATH})

